# Robotic-Arm

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh
install/docker/: entrypoint.sh
install/scripts/: gazebo.sh  ros.sh
src/: CMakeLists.txt  package.xml
src/config/: manipulator.yaml
src/launch/: display.launch  gazebo.launch
src/manipulator/: CMakeLists.txt  package.xml
src/manipulator/config/ur5/: visual_parameters.yaml
src/manipulator/launch/: display.launch  gazebo.launch  launch.py  sil.launch.py
src/manipulator/rviz/: default.rviz
src/manipulator/urdf/: ur.xacro  ur5.xacro
src/manipulator/urdf/inc/: ur5_macro.xacro  ur_common.xacro  ur_macro.xacro
src/meshes/: base_link.STL  link 1.STL  link_4.STL  link_5.STL  link_6.STL
src/universal_robot_5/: CMakeLists.txt
src/universal_robot_5/launch/: launch.py
src/universal_robot_5/rviz/: default.rviz
src/ur5_moveit_config/: package.xml
src/ur5_moveit_config/config/: ros2_controllers.yaml  ur5_robot.urdf.xacro
src/ur_description/config/ur10/: visual_parameters.yaml
src/ur_description/config/ur10e/: visual_parameters.yaml
src/ur_description/config/ur16e/: visual_parameters.yaml
src/ur_description/config/ur20/: visual_parameters.yaml
src/ur_description/config/ur3/: visual_parameters.yaml
src/ur_description/config/ur30/: visual_parameters.yaml
src/ur_description/config/ur3e/: visual_parameters.yaml
src/ur_description/config/ur5/: visual_parameters.yaml
src/ur_description/config/ur5e/: visual_parameters.yaml
src/urdf/: manipulator.csv  manipulator.urdf
workspace/src/universal_robot_5/: package.xml
workspace/src/ur5_moveit_config/: package.xml
workspace/src/ur5_moveit_config/config/: kinematics.yaml
workspace/src/ur_description/: CMakeLists.txt  package.xml
workspace/src/ur_description/launch/: robot_description.launch.py  robot_rviz.launch.py
workspace/src/ur_description/rviz/: default.rviz
workspace/src/ur_description/urdf/inc/: ur5_macro.xacro  ur_macro.xacro
workspace/src/ur_world/: CMakeLists.txt  package.xml
(+131 files in other folders)
