<package format="2">
  <name>manipulator</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for maipulator</p>
    <p>This package contains configuration data, 3D models and launch files
for maipulator robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>GPL-3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros-launch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <export>
    <architecture_independent />
  </export>
</package>